--- a/org/index.org
+++ b/org/index.org
@@ -27,7 +27,7 @@ And    In the future 'having more interfaces open for malicious attacks'
 companies need to [[https://jarjuk.wordpress.com/2017/01/01/sbuilder-roadmap-v2-part1/#orgheadline3][manage their IT on-line openess]] carefully to avoid
 the =Risk of Unfortunate IT failures=. 
 
-[[https://github.com/jarjuk/sbuilder-timeoff-demo][Specification Driven Development]], with adequate [[https://jarjuk.wordpress.com/2018/01/16/specification-driven-development/#development-architecture][development
+=Specification Driven Development=, with adequate [[https://jarjuk.wordpress.com/2018/01/16/specification-driven-development/#development-architecture][development
 architecture]] and [[https://jarjuk.wordpress.com/2018/01/16/specification-driven-development/#process][development process]], [[https://jarjuk.wordpress.com/2018/01/16/specification-driven-development/#orgheadline1][could]] help companies in managing
 their IT on-line openess. As the [[https://jarjuk.wordpress.com/2018/01/16/specification-driven-development/#orgheadline4][result]], expect better systems due to
 understanding the problem better, getting the design right, and being
