--- a/03-virtual-system-test/TEST-RUNNER.org
+++ b/03-virtual-system-test/TEST-RUNNER.org
@@ -6,8 +6,8 @@
     - [[Test Case Input Directory and Interface to Test][Test Case Input Directory and Interface to Test]]
     - [[Iterate Test Case =iterateApiTraceSteps=][Iterate Test Case =iterateApiTraceSteps=]]
   - [[Schema Mapper][Schema Mapper]]
-    - [[Map Data Values =formalX2implementionX=][Map Data Values =formalX2implementionX=]]
-    - [[Schema Tranformations =schemaX()=][Schema Tranformations =schemaX()=]]
+    - [[Map Data Values from Formal Model to Implementation][Map Data Values from Formal Model to Implementation]]
+    - [[Schema Map from Formal Model to Implementation][Schema Map from Formal Model to Implementation]]
   - [[Action =:before TestCase=][Action =:before TestCase=]]
   - [[Action =:request Api=][Action =:request Api=]]
   - [[Action =:response API=][Action =:response API=]]
@@ -148,7 +148,7 @@ end # iterateTestCases
 
 ** Schema Mapper
 
-*** Map Data Values =formalX2implementionX=
+*** Map Data Values from Formal Model to Implementation
 
 Lambda functions to transform data values from formal model data space
 to implementation data space:
@@ -175,7 +175,7 @@ end
  #+END_SRC
 
 
-*** Schema Tranformations =schemaX()=
+*** Schema Map from Formal Model to Implementation
 
 Schema transformations use [[https://github.com/deseretbook/hashformer][hashformer]] GEM, [[https://blog.mikebourgeous.com/2016/11/22/hashformer-transform-data-in-ruby/][a Ruby Hash-based DSL]], for
 transforming data from formal model space to implementation space
