--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-02-12  jj  <jj@horsti>
+
+	* org/index.org (-): comment and feedback secition added
+
 2018-02-09  jj  <jj@horsti>
 
 	* 03-virtual-system-test/TEST-RUNNER.org (Sbuilder): Clarify
