CUSTOD_ID for model state

--- a/02-formal-modeling/MODEL.org
+++ b/02-formal-modeling/MODEL.org
@@ -22,6 +22,9 @@
 ** Spefication Snippets
 
 *** Model State
+    :PROPERTIES:
+    :CUSTOM_ID: MODEL-STATE
+    :END:
 
 **** Model Entity =Users= 
 
