SVC-MACRO custom-id

--- a/02-formal-modeling/MODEL.org
+++ b/02-formal-modeling/MODEL.org
@@ -55,6 +55,9 @@ Timeoff_Companies = {};
 *** Model Service
 
 **** =tla/TimeoffRegisterCompany.tla= 
+     :PROPERTIES:
+     :CUSTOM_ID: SVC-MACRO
+     :END:
 
   #+BEGIN_SRC text :tangle tla/TimeoffRegisterCompany.tla
 (*
