--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-02-20  jj  <jj@horsti>
+
+	* 03-virtual-system-test/TEST-RUNNER.org: CUSTOM_IDs
+
 2018-02-19  jj  <jj@horsti>
 
 	* 02-formal-modeling/MODEL.org (Timeoff_Companies): CUSTOM_IDs:
